--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$5E726.mR78iV16d7KQpevOw.c5HPPLVwYKLZ8j4h7vp.Oo5RVpvau"
+# 	- password: java.lang.String = "$2a$05$GyBPsmt6ZQ/Cruw04NFmg.kbJvs/4O4Fx.x2oQ/h4CfrS8DoMIkMy"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$.2EYkCCLDngLU9IjK/JpOuXSLdtUKJrqePd61AlfB4jhC/ggCY2O."
+# 	- password: java.lang.String = "$2a$05$hAdR1R/rSpi/2FgRmNLskOSHNo5TehzuD9VwJ/ZjIBIY7.R3vuh06"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
