--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$iV2mfj9GLo3fYNikfyy5husZITYYytRU8YahVSV6IvJj8P9LpCVNO"
+# 	- password: java.lang.String = "$2a$05$lBVtFi1Bc4HQ0yMXBjT8w.APl1Lr8lNSs8h3ny6wnOTqSM4HRL7l6"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$f3ENJ4wt..1bPoQtg/Q9ze7GON8DN21lDpRXSewj42YkfPDfzVSu."
+# 	- password: java.lang.String = "$2a$05$JweUExFstCGcUUwLzHu/keL471MVuFgcSCbNLF7cquXiWN//IDkDC"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -273,7 +273,7 @@ technologyrecord01=17
 # 	from acme.entities.technologyRecords.TechnologyRecord:
 # 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Technology record 01"
-# 	- sector: java.lang.String = "This is the sector"
+# 	- sector: java.lang.String = "Technology"
 # 	- inventorName: java.lang.String = "Michael McFlinn"
 # 	- description: java.lang.String = "This is the description of TechnologyRecord01"
 # 	- website: java.lang.String = "http://www.example.com"
@@ -292,7 +292,7 @@ technologyrecord02=18
 # 	from acme.entities.technologyRecords.TechnologyRecord:
 # 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Technology record 02"
-# 	- sector: java.lang.String = "This is the sector"
+# 	- sector: java.lang.String = "Technology"
 # 	- inventorName: java.lang.String = "Bob George"
 # 	- description: java.lang.String = "This is the description of TechnologyRecord02"
 # 	- website: java.lang.String = "http://www.example.com"
@@ -300,26 +300,26 @@ technologyrecord02=18
 # 	- stars: java.lang.Integer = 5
 # 	- isOpenSource: java.lang.Boolean = false
 
-technologyrecord03=19
+toolrecord01=19
 
-# acme.entities.technologyRecords.TechnologyRecord{id=19, version=0}
+# acme.entities.toolRecords.ToolRecord{id=19, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
 # 	- id: int = 19
 # 	- version: int = 0
-# 	from acme.entities.technologyRecords.TechnologyRecord:
+# 	from acme.entities.toolRecords.ToolRecord:
 # 	- serialVersionUID: long = 1
-# 	- title: java.lang.String = "Technology record 03"
-# 	- sector: java.lang.String = "This is the sector"
-# 	- inventorName: java.lang.String = "Harry Hemingway"
-# 	- description: java.lang.String = "This is the description of TechnologyRecord03"
+# 	- title: java.lang.String = "Tool record 01"
+# 	- sector: java.lang.String = "Technology"
+# 	- inventorName: java.lang.String = "Lucas Durant"
+# 	- description: java.lang.String = "This is the description of ToolRecord01"
 # 	- website: java.lang.String = "http://www.example.com"
-# 	- email: java.lang.String = "technologyrecord03@gmail.com"
-# 	- stars: java.lang.Integer = 0
+# 	- email: java.lang.String = "toolrecord01@gmail.com"
+# 	- stars: java.lang.Integer = null
 # 	- isOpenSource: java.lang.Boolean = false
 
-toolrecord01=20
+toolrecord02=20
 
 # acme.entities.toolRecords.ToolRecord{id=20, version=0}
 # 	from java.lang.Object:
@@ -329,27 +329,8 @@ toolrecord01=20
 # 	- version: int = 0
 # 	from acme.entities.toolRecords.ToolRecord:
 # 	- serialVersionUID: long = 1
-# 	- title: java.lang.String = "Tool record 01"
-# 	- sector: java.lang.String = "This is the sector"
-# 	- inventorName: java.lang.String = "Lucas Durant"
-# 	- description: java.lang.String = "This is the description of ToolRecord01"
-# 	- website: java.lang.String = "http://www.example.com"
-# 	- email: java.lang.String = "toolrecord01@gmail.com"
-# 	- stars: java.lang.Integer = 5
-# 	- isOpenSource: java.lang.Boolean = false
-
-toolrecord02=21
-
-# acme.entities.toolRecords.ToolRecord{id=21, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 21
-# 	- version: int = 0
-# 	from acme.entities.toolRecords.ToolRecord:
-# 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Tool record 02"
-# 	- sector: java.lang.String = "This is the sector"
+# 	- sector: java.lang.String = "Technology"
 # 	- inventorName: java.lang.String = "Frank Roosvelt"
 # 	- description: java.lang.String = "This is the description of ToolRecord02"
 # 	- website: java.lang.String = "http://www.example.com"
@@ -357,32 +338,13 @@ toolrecord02=21
 # 	- stars: java.lang.Integer = -1
 # 	- isOpenSource: java.lang.Boolean = true
 
-toolrecord03=22
+Challenge01=21
 
-# acme.entities.toolRecords.ToolRecord{id=22, version=0}
+# acme.entities.challenges.Challenge{id=21, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
-# 	- id: int = 22
-# 	- version: int = 0
-# 	from acme.entities.toolRecords.ToolRecord:
-# 	- serialVersionUID: long = 1
-# 	- title: java.lang.String = "Tool record 03"
-# 	- sector: java.lang.String = "This is the sector"
-# 	- inventorName: java.lang.String = "George Michael"
-# 	- description: java.lang.String = "This is the description of ToolRecord03"
-# 	- website: java.lang.String = "http://www.example.com"
-# 	- email: java.lang.String = "toolrecord03@gmail.com"
-# 	- stars: java.lang.Integer = 0
-# 	- isOpenSource: java.lang.Boolean = false
-
-Challenge01=23
-
-# acme.entities.challenges.Challenge{id=23, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 23
+# 	- id: int = 21
 # 	- version: int = 0
 # 	from acme.entities.challenges.Challenge:
 # 	- serialVersionUID: long = 1
@@ -396,13 +358,13 @@ Challenge01=23
 # 	- expertGoal: java.lang.String = "Score 1000 points"
 # 	- expertReward: acme.framework.datatypes.Money = <<€ 1000.00>>
 
-Challenge02=24
+Challenge02=22
 
-# acme.entities.challenges.Challenge{id=24, version=0}
+# acme.entities.challenges.Challenge{id=22, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
-# 	- id: int = 24
+# 	- id: int = 22
 # 	- version: int = 0
 # 	from acme.entities.challenges.Challenge:
 # 	- serialVersionUID: long = 1
